# gti

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/dance1/: dance.json  frame_001.txt  frame_002.txt  frame_003.txt  frame_004.txt  frame_005.txt  frame_006.txt  frame_007.txt  frame_008.txt  frame_009.txt  frame_010.txt  frame_011.txt  frame_012.txt  frame_013.txt  frame_014.txt  frame_015.txt  frame_016.txt  frame_017.txt  frame_018.txt  frame_019.txt  frame_020.txt  frame_021.txt  frame_022.txt  frame_023.txt  frame_024.txt  frame_025.txt  frame_026.txt  frame_027.txt  frame_028.txt  frame_029.txt  frame_030.txt  frame_031.txt  frame_032.txt  frame_033.txt  frame_034.txt  frame_035.txt  frame_036.txt  frame_037.txt  frame_038.txt
assets/dance2/: dance.json  frame_001.txt  frame_002.txt  frame_003.txt  frame_004.txt  frame_005.txt  frame_006.txt  frame_007.txt  frame_008.txt  frame_009.txt  frame_010.txt  frame_011.txt  frame_012.txt  frame_013.txt  frame_014.txt  frame_015.txt  frame_016.txt  frame_017.txt  frame_018.txt  frame_019.txt  frame_020.txt  frame_021.txt  frame_022.txt  frame_023.txt  frame_024.txt  frame_025.txt  frame_026.txt  frame_027.txt  frame_028.txt  frame_029.txt  frame_030.txt  frame_031.txt  frame_032.txt  frame_033.txt  frame_034.txt  frame_035.txt  frame_036.txt  frame_037.txt  frame_038.txt  frame_039.txt  (+21 more)
scripts/: convert.py
src/: animation.rs  args.rs  main.rs  terminal.rs
