[package]
name = "gti"
version = "0.1.0"
edition = "2021"
description = "A typo-triggered micro-relaxation tool for fast pacers. Typos happen, especially when rushing. When you type gti instead of git, this light Rust CLI forces a chill pill: it enters the alternate screen, plays a smooth ASCII dance animation, then resumes your real git command."
authors = ["gti contributors"]
license = "MIT"
repository = "https://github.com/risubrevis/gti"
categories = ["command-line-utilities"]
keywords = ["git", "easter-egg", "ascii", "animation"]

[dependencies]
crossterm = "0.28"
ctrlc = "3.4"
libc = "0.2"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Debian package metadata (cargo-deb) ──────────────────────────────
[package.metadata.deb]
name = "gti"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
  ["target/release/gti", "usr/bin/gti", "755"],
]

# ── RPM package metadata (cargo-generate-rpm) ─────────────────────────
[package.metadata.generate-rpm]
name = "gti"
license = "MIT"
summary = """Typo-triggered ASCII dance animation that delegates to git."""
description = """When you accidentally type 'gti' instead of 'git', \
this tool plays a short ASCII dance animation before transparently \
delegating to the real git command."""
assets = [
  { source = "target/release/gti", dest = "/usr/bin/gti", mode = "755" },
]
